--- a/style.css
+++ b/style.css
@@ -40,3 +40,14 @@ body{
 	display: inline-block;
 }
 
+.nombre_expression{
+	text-align:center;
+	position: fixed;
+	width:100%;
+	bottom:20px;
+	color:#aeaeae;
+}
+
+.nombre_expression span{
+	font-size: 1.5em;
+}
